objects/Product_Group__c.object
<CustomObject>
    <description>This object contains all product groups and the relation to BU / Div, which is used (mainly) in opportunities</description>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <description>Contains the BU Name</description>
        <label>Business Unit Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Contains the BU code</description>
        <label>Business Unit</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>Contains the name of the Division</description>
        <label>Division Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Contains the Division Code</description>
        <label>Division</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLastSuccessorActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLastSuccessorActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsModifiedByIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Modified By Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSuccessor__c</fullName>
        <label>LastSuccessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neglected_ActivityFutureDays__c</fullName>
        <description>BR 4703</description>
        <inlineHelpText>Threshold used by Neglected Opportunities formula to calculate for many days in the future the latest Due Date of all open or closed Tasks related to Opportunity OR the latest Date of all Events related to Opportunity is set.</inlineHelpText>
        <label>Neglected Opps - Activity Future Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neglected_ActivityPastDays__c</fullName>
        <description>BR 4703</description>
        <inlineHelpText>Threshold used by Neglected Opportunities formula to calculate for many days in the past the latest Due Date of all open or closed Tasks related to Opportunity OR the latest Date of all Events related to Opportunity is set.</inlineHelpText>
        <label>Neglected Opps - Activity Past Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neglected_LastModifiedDays__c</fullName>
        <description>BR 4703</description>
        <inlineHelpText>Threshold used by Neglected Opportunities formula to calculate for how many days an Opportunity (or its related records) was not updated by a Non-Technical User.</inlineHelpText>
        <label>Neglected Opps - Last Modified Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Searchable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only product related PG’s can be used as Offering – Primary Product Group for opportunity. To improve reporting and data quality non-product PG’s can’t be selectable.</description>
        <inlineHelpText>This field specifies if product group can be selected as Offering – Primary Product Group on the opportunity</inlineHelpText>
        <label>Non-Searchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Default_Type__c</fullName>
        <description>This setting defines the default opportunity type by PG</description>
        <inlineHelpText>This setting defines the default opportunity type by PG</inlineHelpText>
        <label>Opportunity Default Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fast Track</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Qualification_Threshold_USD__c</fullName>
        <description>R4 - Opportunity qualification threshold measurement</description>
        <label>Opportunity Qualification Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This value will be used to determine the opportunity type, Fast Track or Regular. Exceeding this value switches the opportunity to Regular</description>
        <inlineHelpText>Threshold for switching an opportunity to Regular type, a value of &quot;USD 0&quot; ignores any threshold for this PG.</inlineHelpText>
        <label>Opportunity Threshold</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Group_Code__c</fullName>
        <description>Numeric PG code to user as external ID</description>
        <externalId>true</externalId>
        <label>Product Group Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Group_Full__c</fullName>
        <formula>Product_Group_Code__c &amp; &apos; - &apos; &amp; Product_Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Name__c</fullName>
        <description>Contains the Product Group Name</description>
        <label>Product Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportingPeriod__c</fullName>
        <label>ReportingPeriodName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor__c</fullName>
        <label>Successor</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_BU__c</fullName>
        <description>Combination of BU / BU Name</description>
        <formula>Business_Unit__c &amp;&quot; - &quot;&amp; Business_Unit_Name__c</formula>
        <label>Technical BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Opportunity_Threshold__c</fullName>
        <description>This technical field shows the Opportunity Threshold Currency value as number value.</description>
        <formula>Opportunity_Threshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technical Opportunity Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tender_Screening_Threshold_USD__c</fullName>
        <description>R4 - Tender Screening Threshold in USD</description>
        <label>Tender Screening Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Product_Groups__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Product Groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Group_Name__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Business_Unit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Division_Name__c</columns>
        <columns>Opportunity_Default_Type__c</columns>
        <columns>Opportunity_Threshold__c</columns>
        <columns>Tender_Screening_Threshold_USD__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <recordTypes>
        <fullName>Product_Group</fullName>
        <active>true</active>
        <description>All PG records</description>
        <label>Product Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>